# ml-hands-on

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml
exercises/session02/: examples.ipynb  exercises.ipynb
exercises/session04/: exercises.ipynb
exercises/session05/: examples.ipynb  exercises.ipynb
exercises/session07/: examples.ipynb  exercises.ipynb
exercises/session08/: exercises.ipynb
exercises/session09/: examples.ipynb  exercises.ipynb
exercises/session10/: exercises.ipynb
exercises/session11/: decision_tree.ipynb  examples.ipynb  exercises.ipynb
exercises/session12/: examples.ipynb  random_forest.ipynb
exercises/session16/: exercises.ipynb
exercises/session17/: exercises.ipynb
exercises/session18/: examples.ipynb  exercises.ipynb
lectures/: INDEX.md
lectures/session01/: ML-Session01-PL.pptx  ML-Session01-T.pptx
lectures/session03/: Git-Intro.md
ml-package-assignments/: README.md
practical-assignment/: ml_bank_marketing.ipynb
src/ml_hands_on/: __init__.py  variance_threshold.py
src/ml_hands_on/base/: __init__.py  estimator.py  model.py  transformer.py
src/ml_hands_on/clustering/: kmeans.py
src/ml_hands_on/data/: dataset.py
src/ml_hands_on/decomposition/: pca.py
src/ml_hands_on/feature_selection/: __init__.py  data_file.py  select_k_best.py  variance_threshold.py
src/ml_hands_on/feature_selection io/: csv_file.py
src/ml_hands_on/io/: csv_file.py  data_file.py
src/ml_hands_on/metrics/: accuracy.py  mse.py  rmse.py
src/ml_hands_on/models/: perceptron.py  (+6 more)
(+28 files in other folders)
