[metadata]
name = ml-hands-on
version = 0.0.1
description = Machine Learning Course @ Catholic University of Portugal, Braga, 2025
long_description = file: README.md
long_description_content_type = text/markdown
keywords = machine-learning, course
author = LCDA-ML-2024/2025
author_email = joacorreia@ucp.pt
url = https://github.com/LCDA-UCP/ml-hands-on
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.10

[options]
package_dir =
    =src
packages = find_namespace:
python_requires = >=3.10
zip_safe = False
include_package_data = True
install_requires =
    scikit-learn==1.6.1
    pandas==2.2.3
    matplotlib==3.10.0
    seaborn==0.13.2

[options.packages.find]
where = src

[options.extras_require]
testing =
    pytest>=7.1.1
    pytest-cov>=3.0.0
    mypy>=0.942
    flake8>=4.0.1
    tox>=3.25.0

[flake8]
max-line-length = 160